<resources>
    <string name="app_name">Flipkart Clone</string>

    <string name="order">My Order</string>
    <string name="cart">My Cart</string>
    <string name="review">My Reviews</string>
    <string name="address">My Addresses</string>

    <string name="language_setting">Language Setting</string>
    <string name="notification_settings">Notification Preferences</string>
    <string name="account_settings">Account Settings</string>
    <string name="logout">Logout</string>

    <string name="this_is_order_page">This is Order Page</string>
    <string name="this_is_review_page">This is Review Page</string>
    <string name="this_is_your_cart">This is Your Cart</string>
    <string name="this_is_your_address">This is Your Address</string>

    <string name="defult">System Language</string>
    <string name="english">English</string>
    <string name="hindi">Hindi</string>
    <string name="this_is_notification_page">This is Notification Page</string>
    <string name="change_profile_photo">Change Profile Photo</string>
    <string name="submit">Submit</string>
    <string name="change_password">Change Password</string>
    <string name="deactivate_account">Deactivate Account</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="text_with_bullets">\u2022</string>
</resources>

