<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/background">

    <SearchView
        android:id="@+id/langSearchBar"
        android:layout_width="376dp"
        android:layout_height="48dp"
        android:background="@drawable/roundborder"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.028" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="508dp"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/languageDefault"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="@drawable/border_set"
            android:buttonTint="#FFFFFF"
            android:padding="10sp"
            android:text="@string/defult"
            android:textColor="#ffffff" />

        <RadioButton
            android:id="@+id/language1"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="@drawable/border_set"
            android:buttonTint="#FFFFFF"
            android:checked="true"
            android:padding="10sp"
            android:text="@string/english"
            android:textColor="#ffffff" />

        <RadioButton
            android:id="@+id/language2"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="@drawable/border_set"
            android:buttonTint="#FFFFFF"
            android:checked="false"
            android:padding="10sp"
            android:text="@string/hindi"
            android:textColor="#ffffff" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

    tools:context=".LanguageActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:text="Language Activity"
        />

</RelativeLayout>

