<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible">
        /*#8B83579E*/

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="355dp"
        android:layout_height="101dp"
        android:background="@drawable/roundbordermain"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.03">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="119dp"
            android:layout_height="99dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/user" />

        <TextView
            android:id="@+id/username"
            android:layout_width="69dp"
            android:layout_height="21dp"
            android:text="UserName"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.143"
            app:layout_constraintStart_toEndOf="@+id/imageView5"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <Button
        android:id="@+id/order"
        android:layout_width="360dp"
        android:layout_height="58dp"
        android:background="@drawable/roundborder"
        android:gravity="left|center_vertical"
        android:paddingLeft="25sp"
        android:shadowColor="#00FFFFFF"
        android:text="@string/order"
        android:textAllCaps="false"
        android:textDirection="locale"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.369" />

    <Button
        android:id="@+id/cart"
        android:layout_width="360dp"
        android:layout_height="58dp"
        android:background="@drawable/roundborder"
        android:gravity="left|center_vertical"
        android:paddingLeft="25sp"
        android:shadowColor="#00FFFFFF"
        android:text="@string/cart"
        android:textAllCaps="false"
        android:textDirection="locale"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.556" />

    <Button
        android:id="@+id/review"
        android:layout_width="360dp"
        android:layout_height="58dp"
        android:background="@drawable/roundborder"
        android:gravity="left|center_vertical"
        android:paddingLeft="25sp"
        android:shadowColor="#00FFFFFF"
        android:text="@string/review"
        android:textAllCaps="false"
        android:textDirection="locale"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.741" />

    <Button
        android:id="@+id/address"
        android:layout_width="360dp"
        android:layout_height="58dp"
        android:background="@drawable/roundborder"
        android:gravity="left|center_vertical"
        android:paddingLeft="25sp"
        android:shadowColor="#00FFFFFF"
        android:text="@string/address"
        android:textAllCaps="false"
        android:textDirection="locale"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.928" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="411dp"
        android:layout_height="192dp"
        android:background="#A970EF"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/border_set"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/language_icon"
                android:layout_width="42dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:duplicateParentState="true"
                android:foregroundTint="#302E2E"
                android:gravity="center_vertical"
                android:padding="10sp"
                app:srcCompat="@android:drawable/ic_menu_sort_alphabetically" />

            <TextView
                android:id="@+id/language_setting"
                android:layout_width="368dp"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                android:paddingStart="15sp"
                android:text="@string/language_setting"
                android:textColor="#ffffff"
                android:textSize="21sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/border_set"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/notification_icon"
                android:layout_width="110dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:padding="10sp"
                app:srcCompat="@android:drawable/ic_lock_silent_mode_off" />

            <TextView
                android:id="@+id/notification_setting"
                android:layout_width="368dp"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                android:paddingStart="15sp"
                android:text="@string/notification_settings"
                android:textColor="#ffffff"
                android:textSize="21sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/border_set"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/account_icon"
                android:layout_width="110dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:padding="10sp"
                app:srcCompat="@android:drawable/ic_menu_manage" />

            <TextView
                android:id="@+id/account_setting"
                android:layout_width="368dp"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                android:paddingStart="15sp"
                android:text="@string/account_settings"
                android:textColor="#ffffff"
                android:textSize="21sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/border_set"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/logout_icon"
                android:layout_width="110dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:padding="10sp"
                app:srcCompat="@android:drawable/ic_menu_revert" />

            <TextView
                android:id="@+id/logout"
                android:layout_width="368dp"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                android:paddingStart="15sp"
                android:text="@string/logout"
                android:textColor="#ffffff"
                android:textSize="21sp" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>