<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorgrad1">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.059"
        app:srcCompat="@drawable/user" />

    <TextView
        android:id="@+id/userProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_profile_photo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:layout_width="413dp"
        android:layout_height="450dp"
        android:background="#fff"
        android:orientation="vertical"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <EditText
            android:id="@+id/userfirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:ems="10"
            android:hint="First Name"
            android:inputType="textPersonName"
            android:padding="15dp" />

        <EditText
            android:id="@+id/userlastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:ems="10"
            android:hint="Last Name"
            android:inputType="textPersonName"
            android:padding="15dp" />

        <EditText
            android:id="@+id/userEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:autoLink="email"
            android:ems="10"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:padding="15dp" />

        <EditText
            android:id="@+id/userphoneNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:ems="10"
            android:hint="Mobile Number"
            android:inputType="number"
            android:padding="15dp" />

        <Button
            android:id="@+id/button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/roundbordermain"
            android:gravity="center_horizontal|center_vertical"
            android:padding="2dp"
            android:text="@string/submit" />

        <TextView
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="25sp"
            android:background="@drawable/border_set"
            android:gravity="center_vertical"
            android:padding="10sp"
            android:paddingStart="30sp"
            android:text="@string/change_password"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/deactivate"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:background="@drawable/border_set"
            android:gravity="center_vertical"
            android:padding="10sp"
            android:paddingStart="30sp"
            android:text="@string/deactivate_account"
            android:textColor="#ffffff" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>